@@ -214,10 +214,6 @@ sub minter { 'Dist::Zilla::Tester::_Minter' }
     my $ok = eval { DateTime::TimeZone->new(name => 'local'); 1 };
     local $ENV{TZ} = $ok ? $ENV{TZ} : 'UTC';
 
-    # XXX: We *must eliminate* the need for this!  It's only here because right
-    # now building a dist with (root <> cwd) doesn't work. -- rjbs, 2010-03-08
-    my $wd = File::pushd::pushd($self->root);
-
     $target ||= do {
       my $target = path($self->tempdir)->child('build');
       $target->mkpath;
@@ -229,10 +225,6 @@ sub minter { 'Dist::Zilla::Tester::_Minter' }
 
   around ['test', 'release'] => sub {
     my ($orig, $self) = @_;
-
-    # XXX: We *must eliminate* the need for this!  It's only here because right
-    # now building a dist with (root <> cwd) doesn't work. -- rjbs, 2010-03-08
-    my $wd = File::pushd::pushd($self->root);
 
     return $self->$orig;
   };
